<resources>
    <string name="app_name">Sadaqah</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_how_to_use">How to use?</string>
    <string name="nav_share_app">Share the app </string>
    <string name="nav_rate_app">Rate the app</string>
    <string name="nav_khayr_news">Khayr news</string>
    <string name="nav_go_to_website">Go to website</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_user_email">android.studio@android.com</string>

    <string name="nav_signup">English version</string>
    <string name="nav_name">English version</string>
    <string name="header_title">English version</string>
    <string name="login_welcome">ً  English version  </string>
    <string name="login_signup_continoue">English version</string>
    <string name="login_email">English version</string>
    <string name="login_password">English version</string>
    <string name="login_forgot_password">English version</string>
    <string name="login">English version</string>
    <string name="login_new_user_signup">English version</string>
    <string name="login_signup">English version</string>
    <string name="facebook">English version</string>
    <string name="google">English version</string>
    <string name="or">English version</string>
    <string name="tab_history">English version</string>
    <string name="tab_setting">English version</string>
    <string name="tab_contact">English version</string>
    <string name="dialog_text">English version</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">NO</string>
    <string name="server_error">English version</string>
    <string name="rs">English version</string>
    <string name="reg_name">English version</string>
    <string name="reg_login">English version</string>
    <string name="reg_allready_user">English version</string>
    <string name="empty_name">English version</string>
    <string name="empty_email">English version</string>
    <string name="invalid_email">English version</string>
    <string name="empty_password">English version</string>
    <string name="save_profile">Save Profile</string>
    <string name="change">English version</string>

    <string name="facebook_app_id">112472986025421</string>
    <string name="edt_profile">Edit Profile</string>
    <string name="internet_check">No Internet connection available</string>

    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-8165423984347142~8979805511</string>
    <!--<string name="interstitial_full_screen">ca-app-pub-0664570763252260/1769900428</string>-->
    <!--Setting-->
    <string name="setting_aboutkhyr">About Khayr</string>
    <string name="pushnotification">Push Notification</string>
    <string name="term_condition">Term and condition</string>
    <string name="privacy_policy">Privacy and policy</string>

</resources>
