<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/user_profile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/user_image_layout"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/lite_gray_circle">

                <com.innoapps.sadaqah.helper.RoundedImageView
                    android:id="@+id/img_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/ic_default_profile" />


                <ImageView
                    android:id="@+id/img_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:padding="5dp"
                    android:src="@mipmap/profile_changephoto" />


            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_image_layout"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="30dp"

                >

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:gravity="right"
                    android:hint="@string/reg_name"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="#b2b3b5"
                    android:textSize="15dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_name"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="30dp"

                >

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:gravity="right"
                    android:hint="@string/login_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="#b2b3b5"
                    android:textSize="15dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_email"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="30dp">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:gravity="right"
                    android:hint="@string/login_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="#b2b3b5"
                    android:textSize="15dp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txt_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_password"
                android:layout_marginLeft="15dp"
                android:gravity="left"
                android:text="@string/change" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_change"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="50dp"
                android:background="@color/colorPrimary"
                android:text="@string/save_profile"
                android:textColor="@color/white"
                android:textSize="14dp" />


        </RelativeLayout>
    </ScrollView>

</LinearLayout>
